--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,10 @@
-//
-   Created by ashan on 29/07/16.
-
+doctype html
+html
+    head
+        title Sync Player
+            if useExternalStyles
+                link(rel='stylesheet', href='/build/application.css')
+    body
+        h1 Hello, world
+        script(src='/build/vendor.js')
+        script(src='/build/application.js')
